# multibags_to_csv

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: auto_converter.launch  converter-multi.launch  csv_converter.launch  csv_converter_multiobs.launch
nodes/: convert_harness  csv_converter_multi  csv_converter_multiobs
param/: indiv-converter.yaml  param.yaml
src/multibags_to_csv/: ConvertHarness.py  ConverterBoundary.py  ConverterMulti.py  ConverterMultiobs.py  ConverterParams.py  ConverterPosition.py  ConverterPositionGPS.py  ConverterRuntime.py  aux_function.py  converter_multi.py  each_robot_converter.sh  live_plot.py  rename_topic.py  test_reader.py
src/multibags_to_csv/old/: ConverterBoundary.py  ConverterPosition.py  ConverterPositionGPS.py  ConverterRuntime.py
